# deployed_vehicle_code

./: .gitignore  README.md  README.tex.md  error.txt  log.txt  log_observer.txt  out.txt  stty.arduino
launch_config/: simple_MPC_working.launch
plotjuggler_layout/: controller_performance.xml  observer_performance.xml  (+1 more)
src/eefig_learning/: CMakeLists.txt  README.md  package.xml
src/eefig_learning/0_other/: Vehicle_LPV_NON_linear_model.ipynb  Vehicle_LPV_NON_linear_model.py  eefig_offline.py  initial_mat_data.py  offline_training_2.py  test_online.py  test_shivam.py
src/eefig_learning/0_other/data/: EEFIG_model_vehicle_jaime_manual2_33ms.mat  OL_STATES_DATA_33ms_In_based_V3.mat  data_fuzz_ws_V2.mat  data_learn_EEFIG.mat  info.mat  log_true.txt  manual_dataset2_20ms.mat  manual_dataset2_33ms.mat
src/eefig_learning/data/csv/: 0.8_vel_2021-06-03-16-23-21.csv  2021-09-22-08-41-01.csv  run_2_BCNeMotorsport.csv
src/eefig_learning/launch/: eefig.launch
src/eefig_learning/saves/: rc_car_model1
src/eefig_learning/scripts/: LPV_MPC_EEFIG.py  LPV_MPC_EEFIG_node.py
src/eefig_learning/scripts/lpv_mpc_eefig/: __init__.py
src/eefig_learning/scripts/lpv_mpc_eefig/common/: __init__.py  eefig.py  granule.py  granule_performance_index.py  mdg.py  offline_learning.py
src/eefig_learning/scripts/lpv_mpc_eefig/visualization/: __init__.py  plot_granules.py
src/eefig_learning/srv/: LPVMat.srv
src/eefig_learning/test/: test.py  test_offline_learning.py  test_visualization.py  utils.py
src/vehicle_sensors/sensor_fusion/: CMakeLists.txt  package.xml
src/vehicle_sensors/sensor_fusion/imu/scr/: imu_listner.py
src/vehicle_sensors/sensor_fusion/msg/: control.msg
src/vehicle_sensors/sensor_fusion/src/: lqr_state_estimator.py  observer.py  sensor_reading.py  tranformer.py
(+142 files in other folders)
